Updating deleted and ignored files

--- a/03_figures/.gitignore
+++ b/03_figures/.gitignore
@@ -11,3 +11,7 @@ table_SI_sensorDepths.csv
 suppInfo_siteMap.jpg
 plot_no3_decline.svg
 table_SI_grabDepths_edited.xlsx
+0_FInal figs for BGC Letters
+plot_contour_ALT_plusCondTurb_noColorGuides.png
+plot_contour_ALT_plusCondTurb_noColorGuides_pluslegendTitles.png
+watershed.jpeg
